# turtle_arena

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/turtle_arena/: arena_node.hpp  arena_world.hpp  challenge_manager.hpp  lidar_sensor.hpp  renderer.hpp  robot_entity.hpp  world_loader.hpp
src/: arena_node.cpp  arena_world.cpp  challenge_manager.cpp  lidar_sensor.cpp  main.cpp  renderer.cpp  robot_entity.cpp  world_loader.cpp
test/: test_cmd_vel_to_odom.py
tools/anim/: gen_comparison_gifs.py
worlds/: empty_arena.yaml  obstacle_slalom.yaml  simple_maze.yaml
