<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_arena</name>
  <version>0.1.0</version>
  <description>
    A turtlesim successor with real 2D physics (Box2D), simulated lidar, and
    game-like maze/obstacle-course challenges, rendered with SFML. Keeps the
    turtlesim /spawn, /kill, and cmd_vel surface so existing tutorials and
    teleop tools work unmodified.
  </description>
  <maintainer email="vikaschauhan309@gmail.com">Vikas Chauhan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>turtlesim</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
